--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
           <p class="col-12">Copyright 2021©.Todos los derechos reservados.</p>
         </div>
     </footer>
+    
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="proyectoRuiz.js"></script>
 </body>
 </html>
