--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:wght@200&family=Roboto:ital,wght@1,700&family=Rubik:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
 
@@ -49,32 +50,9 @@
             <h2 class="col-12">CATALOGO</h2>
         </div>
 
-        <div class="row g-0 d-inline-flex justify-content-around pelicula mb-4">
-            <div class=" col-5 col-md-4 col-lg-3 m-lg-1">
-                <div class="card">
-                    <img src="images/demonslayer.webp" class="card-img" alt="poster de la pelicula demonslayer">
-                </div>
-            </div>
-
-            <div class=" col-5 col-md-4 col-lg-3 m-lg-1">
-                <div class="card">
-                    <img src="images/akira.webp" class="card-img" alt="poster de akira, protagonista acercandose a moto">
-                </div>
-            </div>
-
-            <div class=" col-5 col-md-4 col-lg-3 m-lg-1">
-                <div class="card">
-                    <img src="images/chihiro.webp" class="card-img" alt="poster del viaje de chihiro, joven en ambiente asiatico">
-                </div>
-            </div>
-      
+        <div class="row g-0 d-inline-flex justify-content-around pelicula mb-4">      
         </div>  
 
-        <div class="row d-flex justify-content-center">
-            <button class="btn btn-primary buttonColor btn-lg col-4" type="submit">Mostrar Datos del Catalogo</button>
-        </div>
-
-        <div id="mostrarCatalogo" class="row"></div>
 
         <div class="cart row justify-content-center mt-2">
             <div class="headerCarrito col-12 d-md-flex justify-content-around row">
@@ -83,9 +61,11 @@
                 <h5 class="col-3">Cantidad</h5>
                 <h5 class="col-3">Total</h5>
             </div>
-            <div class="peliculasCompradas row">
 
+            <div class="peliculasCompradas row">
             </div>
+
+            <button type="button" class="btn btn-dark col-4 btnLimpiar mt-5"> Limpiar Carrito</button>
             
         </div>
 
