--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
                         <li class="nav-item">
                             <a class="nav-link " aria-current="page" href="#">Inicio</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -42,32 +39,34 @@
     <section class="container-fluid">
 
         <div class="row intro mb-5 jumbotron jumbotron-fluid">
-            <h1 class="col-12 display-4">AniMovies</h1>
-            <p class="lead">"El mejor cine de animacion japonesa del país"</p>
+            <h1 class="col-12 display-4">MangaTeka</h1>
+            <p class="lead">"El sitio lider en venta de manga online"</p>
         </div>
 
         <div class="row">
             <h2 class="col-12">CATALOGO</h2>
         </div>
 
-        <div class="row g-0 d-inline-flex justify-content-around pelicula mb-4">      
+        <div class="row g-0 d-inline-flex justify-content-around producto mb-4">      
         </div>  
 
 
         <div class="cart row justify-content-center mt-2">
             <div class="headerCarrito col-12 d-md-flex justify-content-around row">
-                <h5 class="col-3"> Pelicula</h5>
+                <h5 class="col-3"> Producto</h5>
                 <h5 class="col-3">Precio</h5>
                 <h5 class="col-3">Cantidad</h5>
                 <h5 class="col-3">Total</h5>
             </div>
 
-            <div class="peliculasCompradas row">
+            <div class="productosComprados row">
             </div>
 
             <button type="button" class="btn btn-dark col-4 btnLimpiar mt-5"> Limpiar Carrito</button>
+            <button type="button" class="btn btn-light col-4 btnComprar mt-5"> Finalizar Compra</button>
             
         </div>
+
 
 
     
