--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </footer>
     
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="classes.js"></script>
-    <script src="proyectoRuiz.js"></script>
+    <script src="objetos.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
